fix z-index and height issues

--- a/src/components/css/featuressection.css
+++ b/src/components/css/featuressection.css
@@ -1,5 +1,6 @@
 .features-section {
-    height: 25vh;
+    height: 100%;
+    min-height: 30vh;
 }
 
 .bullet-land {
