--- a/src/components/css/landingsection.css
+++ b/src/components/css/landingsection.css
@@ -1,12 +1,13 @@
 .landing-section {
-  height: 50vh;
+  height: 100%;
+  min-height: 50vh;
   width: 100%;
 }
 
 .landing-title-box {
   text-align: center;
   height: 100%;
-  max-height: 500px;
+  min-height: 500px;
   /* padding: 20px; */
   width: 100%;
   max-width: 1200px;
